# DeepLearningPractice

./: CMakeLists.txt  README.md  优质博客.md
src/activator/: activator.cc  activator.h
src/linearunit/: linear-unit.cc  linear-unit.h
src/perceptron/: perceptron.cc  perceptron.h
src/test/: linearunit-test.cc  perceptron-test.cc
src/utils/: dl-utils.h
